[gd_scene load_steps=3 format=3 uid="uid://cfqcf3maywmn3"]

[ext_resource type="Script" path="res://scenes/registration.gd" id="1_kwj3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blruv"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="registration" type="Control" node_paths=PackedStringArray("role_select_panel", "create_wallet_panel", "wallet_created_panel", "participant_button", "facilitator_button", "create_wallet_button", "wallet_password_field", "confirm_password_field", "wallet_address_field", "word_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_kwj3b")
role_select_panel = NodePath("role_selection")
create_wallet_panel = NodePath("create_wallet")
wallet_created_panel = NodePath("wallet_created")
participant_button = NodePath("role_selection/CenterContainer/HBoxContainer/VBoxContainer/participant_button")
facilitator_button = NodePath("role_selection/CenterContainer/HBoxContainer/VBoxContainer2/facilitator_button")
create_wallet_button = NodePath("create_wallet/CenterContainer/VBoxContainer/create_wallet_button")
wallet_password_field = NodePath("create_wallet/CenterContainer/VBoxContainer/wallet_password")
confirm_password_field = NodePath("create_wallet/CenterContainer/VBoxContainer/confirm_password")
wallet_address_field = NodePath("wallet_created/CenterContainer/VBoxContainer/HBoxContainer/wallet_address")
word_list = NodePath("wallet_created/CenterContainer/VBoxContainer/word_list")

[node name="role_selection" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="role_selection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="role_selection/CenterContainer"]
offset_left = 711.0
offset_top = 474.0
offset_right = 1209.0
offset_bottom = 606.0
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="role_selection/CenterContainer/HBoxContainer"]
offset_right = 225.0
offset_bottom = 132.0

[node name="participant_button" type="Button" parent="role_selection/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 50)
offset_right = 225.0
offset_bottom = 50.0
text = "REGISTER AS A PARTICIPANT"

[node name="description" type="Label" parent="role_selection/CenterContainer/HBoxContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 225.0
offset_bottom = 106.0
text = "Participants simply create a secure Ethereum wallet. "
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="role_selection/CenterContainer/HBoxContainer"]
offset_left = 275.0
offset_right = 498.0
offset_bottom = 132.0

[node name="facilitator_button" type="Button" parent="role_selection/CenterContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(0, 50)
offset_right = 223.0
offset_bottom = 50.0
text = "REGISTER AS A FACILITATOR"

[node name="description" type="Label" parent="role_selection/CenterContainer/HBoxContainer/VBoxContainer2"]
offset_top = 54.0
offset_right = 223.0
offset_bottom = 132.0
text = "Facilitators create an Ethereum wallet, a smart contract, and fund it."
autowrap_mode = 2

[node name="create_wallet" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="create_wallet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="create_wallet/CenterContainer"]
custom_minimum_size = Vector2i(500, 0)
offset_left = 710.0
offset_top = 474.0
offset_right = 1210.0
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="create_wallet/CenterContainer/VBoxContainer"]
offset_right = 500.0
offset_bottom = 26.0
text = "CREATE WALLET"
horizontal_alignment = 1

[node name="wallet_password" type="LineEdit" parent="create_wallet/CenterContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 61.0
placeholder_text = "ENTER A PASSWORD"
secret = true
secret_character = "ðŸ¤«"

[node name="confirm_password" type="LineEdit" parent="create_wallet/CenterContainer/VBoxContainer"]
offset_top = 65.0
offset_right = 500.0
offset_bottom = 96.0
placeholder_text = "CONFIRM PASSWORD"
secret = true
secret_character = "ðŸ¤«"

[node name="create_wallet_button" type="Button" parent="create_wallet/CenterContainer/VBoxContainer"]
offset_top = 100.0
offset_right = 500.0
offset_bottom = 131.0
text = "CREATE WALLET"

[node name="close_button" type="Button" parent="create_wallet"]
offset_left = 712.0
offset_top = 352.0
offset_right = 780.0
offset_bottom = 383.0
text = "<- BACK"

[node name="wallet_created" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="wallet_created"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="wallet_created/CenterContainer"]
custom_minimum_size = Vector2i(500, 0)
offset_left = 710.0
offset_top = 387.0
offset_right = 1210.0
offset_bottom = 692.0
grow_horizontal = 2
grow_vertical = 2

[node name="status" type="Label" parent="wallet_created/CenterContainer/VBoxContainer"]
offset_right = 500.0
offset_bottom = 26.0
text = "WALLET CREATED!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="wallet_created/CenterContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 56.0
alignment = 1

[node name="wallet_label" type="Label" parent="wallet_created/CenterContainer/VBoxContainer/HBoxContainer"]
offset_left = 134.0
offset_right = 210.0
offset_bottom = 26.0
text = "ADDRESS:"

[node name="wallet_address" type="Label" parent="wallet_created/CenterContainer/VBoxContainer/HBoxContainer"]
offset_left = 214.0
offset_right = 366.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 0, 0.996078, 1)
text = "0xE45476AB12456D"

[node name="spacer" type="Control" parent="wallet_created/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 60.0
offset_right = 500.0
offset_bottom = 110.0

[node name="reminder" type="Label" parent="wallet_created/CenterContainer/VBoxContainer"]
offset_top = 114.0
offset_right = 500.0
offset_bottom = 166.0
theme_override_colors/font_color = Color(1, 0, 0.0941176, 1)
text = "PLEASE WRITE DOWN THESE WORDS, THEY WILL ALLOW YOU TO RECOVER YOUR WALLET"
horizontal_alignment = 1
autowrap_mode = 2

[node name="word_list" type="RichTextLabel" parent="wallet_created/CenterContainer/VBoxContainer"]
offset_top = 170.0
offset_right = 500.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]HAPPY OTHERWISE SAD OKAY HILT ENGINE HAPPY OTHERWISE SAD OKAY HILT ENGINE[/center]"
fit_content_height = true
scroll_active = false
autowrap_mode = 2

[node name="Panel" type="Panel" parent="wallet_created/CenterContainer/VBoxContainer/word_list"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_blruv")

[node name="spacer2" type="Control" parent="wallet_created/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 220.0
offset_right = 500.0
offset_bottom = 270.0

[node name="login_button" type="Button" parent="wallet_created/CenterContainer/VBoxContainer"]
offset_top = 274.0
offset_right = 500.0
offset_bottom = 305.0
text = "LOGIN!"

[node name="close_button" type="Button" parent="wallet_created"]
offset_left = 704.0
offset_top = 352.0
offset_right = 772.0
offset_bottom = 383.0
text = "<- BACK"
